# steam-cloud-backup

./: .gitignore  LICENSE  Makefile  README.md  lib.py  main.py  pyproject.toml
.githooks/: pre-commit  pre-push
.github/workflows/: check.yml  release.yml
steamcb/: cli.py  errors.py  lib.py  tools.py
