[project]
name = "steam-cloud-backup"
version = "0.1.0"
description = "micro-script for downloading all save files from steam cloud"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp[speedups]>=3.14.1",
]

[project.urls]
Repository = "https://github.com/q-deltafractal/steam-cloud-backup.git"
Issues = "https://github.com/q-deltafractal/steam-cloud-backup/issues"

[tool.ruff.format]
quote-style = "single"
